Fix for banner images stretching on mobile

--- a/src/sass/component/_figures.scss
+++ b/src/sass/component/_figures.scss
@@ -152,9 +152,7 @@
     }
   }
   .c-figure__image {
-    display:block;
     z-index:10;
-    min-height:100%;
     min-width:100%;
   }
   .c-figure__caption {
